Checking in before I go completely off the rails

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<title>AutomationWeb</title>
 	<base href="/">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="google-signin-client_id" content="587090413606-rdbq05gsl7hnoc82kcco1jijja1fm70p.apps.googleusercontent.com">
 	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
